Add lang ident model